deneme/app/keycloak.yaml
 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: "argocd"
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: 
      arn:aws:acm:us-east-1:767397753907:certificate/e7e88e2a-38b1-48c5-bab7-bda08429202f
    alb.ingress.kubernetes.io/group.name: test-eks
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "20"
    alb.ingress.kubernetes.io/custom-http-headers: "Content-Security-Policy=frame-src 'self' http://keycloak.ycsuisse.click"
    alb.ingress.kubernetes.io/healthcheck-path: /dummy-path
    alb.ingress.kubernetes.io/healthcheck-port: "8080"
    alb.ingress.kubernetes.io/inbound-cidrs: 0.0.0.0/0
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/success-codes: "404"
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: "alb"
  rules:
  - host: "keycloak.ycsuisse.click "
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              name: http
